--- a/site/index.html
+++ b/site/index.html
@@ -73,15 +73,15 @@
         <div class="hidden md:block absolute top-0 left-0 w-1/2 h-screen" style="background-color: #fafbec;"></div>
         <div class="hidden md:block absolute top-0 right-0 w-1/2 h-screen" style="background-color: #A95028;"></div>
         <!-- Mobile backgrounds -->
-        <div class="md:hidden absolute top-0 left-0 w-full h-1/2" style="background-color: #fafbec;"></div>
-        <div class="md:hidden absolute bottom-0 left-0 w-full h-1/2" style="background-color: #A95028;"></div>
+        <div class="md:hidden absolute top-0 left-0 w-full" style="background-color: #fafbec; height: 65vh;"></div>
+        <div class="md:hidden absolute left-0 w-full" style="background-color: #A95028; top: 65vh; bottom: 0;"></div>
 
-        <div class="relative z-10 min-h-screen flex flex-col md:flex-row">
+        <div class="relative z-10 flex flex-col md:flex-row md:min-h-screen">
             <!-- Left side - Logo and tagline -->
-            <div class="flex-1 flex flex-col justify-center items-center px-6 py-8 pb-4 md:px-12 md:py-20">
+            <div class="flex flex-col justify-center items-center px-6 py-8 md:flex-1 md:px-12 md:py-20" style="min-height: 65vh;">
                 <div class="text-center max-w-lg">
                     <div class="mb-6">
-                        <img src="img/logo-manaiba.png" alt="Manaíba" class="h-48 md:h-42 w-auto mx-auto">
+                        <img src="img/logo-manaiba.png" alt="Manaíba" class="h-75 md:h-42 w-auto mx-auto">
                     </div>
                     <p class="text-lg md:text-xl lg:text-2xl text-gray-700 leading-relaxed hero-tagline mb-6" data-pt="Unimos tecnologia e agricultura para colaborar com a abundância da vida na Terra" data-en="We unite technology and agriculture to collaborate with the abundance of life on Earth">
                         Unimos tecnologia e agricultura para colaborar com a abundância da vida na Terra
@@ -95,7 +95,7 @@
             </div>
 
             <!-- Right side - Content -->
-            <div class="flex-1 flex flex-col justify-center items-center px-6 py-8 pt-4 md:px-12 md:py-20">
+            <div class="flex flex-col justify-center items-center px-6 py-8 md:flex-1 md:px-12 md:py-20" style="min-height: 35vh;">
                 <div class="text-center max-w-lg">
                     <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-white mb-4 about-title" data-pt="Sobre Nós" data-en="About Us">Sobre Nós</h2>
                     <p class="text-lg md:text-xl lg:text-2xl text-white leading-relaxed hero-tagline mb-4" data-pt="A Manaíba nasce para atuar na intersecção entre Tecnologia e Agricultura." data-en="We work at the intersection of technology and agriculture.">
