Change a few more string styles

--- a/site/index.html
+++ b/site/index.html
@@ -255,22 +255,22 @@
                 en: 'About Us'
             },
             'about-text-1': {
-                pt: 'Nosso objetivo é contribuir com a expansão da <span style="color: #dde499"><b>Agricultura sustentável e regenerativa</b></span>.',
-                en: 'We were born to contribute to the expansion of <span style="color: #dde499"><b>sustainable and regenerative agriculture systems</b><span>.'
+                pt: 'Nosso objetivo é contribuir com a expansão da <span style="color: #364c28"><b>Agricultura sustentável e regenerativa</b></span>.',
+                en: 'We were born to contribute to the expansion of <span style="color: #364c28"><b>sustainable and regenerative agriculture systems</b><span>.'
             },
             'about-text-2': {
-                pt: 'Focamos em <span style="color: #dde499"><b>sistemas de software, sensoriamento remoto, rastreabilidade, IA, Open Source</b></span> e mais.',
-                en: 'Manaíba focuses on <span style="color: #dde499"><b>software systems, remote sensing, traceability, AI, Open Source</b></span>, and more.'
+                pt: 'Focamos em <span style="color: #364c28"><b>sistemas de software, sensoriamento remoto, rastreabilidade, IA, Open Source</b></span> e mais.',
+                en: 'Manaíba focuses on <span style="color: #364c28"><b>software systems, remote sensing, traceability, AI, Open Source</b></span>, and more.'
             },
 
             // Contact section
             'contact-title': {
-                pt: 'Vamos Conversar',
-                en: 'Get in Touch'
+                pt: '<span style="color: #dde499;">Vamos Conversar</span>',
+                en: '<span style="color: #dde499;">Get in Touch</span>'
             },
             'contact-description': {
-                pt: 'Entre em contato conosco para descobrir como podemos ajudar você com desenvolvimento de tecnologia na agricultura. Nossa equipe está sempre disponível para esclarecer dúvidas e apresentar soluções.',
-                en: 'Contact us to discover how we can help you achieve your technological agriculture needs. Our team is always available to answer questions and present solutions.'
+                pt: 'Entre em contato conosco para descobrir como podemos ajudar você com <b>desenvolvimento de tecnologia na agricultura</b>. Nossa equipe está sempre disponível para esclarecer dúvidas e apresentar soluções.',
+                en: 'Contact us to discover how we can help you achieve your <b>technological agriculture needs</b>. Our team is always available to answer questions and present solutions.'
             },
             'contact-email-btn': {
                 pt: 'Enviar Email',
@@ -283,8 +283,8 @@
 
             // Footer
             'footer-tagline': {
-                pt: 'Criando soluções inovadoras para a agricultura.',
-                en: 'At the crossover of technology and agriculture.'
+                pt: '<span style="color: #dde499;">Criando soluções inovadoras para a agricultura.</span>',
+                en: '<span style="color: #dde499;">At the crossover of technology and agriculture.</span>'
             },
             'footer-copyright': {
                 pt: '© 2025 Manaíba. Todos os direitos reservados.',
