improve copyright message

--- a/site/index.html
+++ b/site/index.html
@@ -216,8 +216,8 @@
                 <p class="text-gray-100 mb-6 footer-tagline"
                    data-translate="footer-tagline">
                    Criando soluções inovadoras para a agricultura</p>
-                <div class="border-t border-gray-800 pt-6">
-                    <p class="text-gray-100 text-sm footer-copyright"
+                <div class="border-t border-gray-800 pt-4">
+                    <p class="text-xs footer-copyright"
                        data-translate="footer-copyright">
                         © 2025 Manaíba. Todos os direitos reservados.
                     </p>
@@ -287,8 +287,8 @@
                 en: '<span style="color: #dde499;">At the crossover of technology and agriculture.</span>'
             },
             'footer-copyright': {
-                pt: '© 2025 Manaíba. Todos os direitos reservados.',
-                en: '© 2025 Manaíba. All rights reserved.'
+                pt: '<span style="color: #b0a384;">© 2025 Manaíba. Todos os direitos reservados.</span>',
+                en: '<span style="color: #b0a384;">© 2025 Manaíba. All rights reserved.</span>'
             }
         };
 
