--- a/site/index.html
+++ b/site/index.html
@@ -130,18 +130,20 @@
             <div class="flex flex-col justify-center items-center px-6 py-8 md:flex-1 md:px-12 md:py-20"
                  style="min-height: 35vh;">
                 <div class="text-center max-w-lg">
-                    <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-white mb-4 about-title"
+                    <h2 class="text-3xl md:text-4xl lg:text-4xl font-bold text-white mb-4 about-title"
                         data-translate="about-title">Sobre Nós</h2>
                     <p class="text-lg md:text-xl lg:text-2xl text-white leading-relaxed hero-tagline mb-4"
                        data-translate="about-text-1">
                         A Manaíba nasce com o objetivo de enfrentar os desafios da expansão de práticas sustentáveis
                         e regenerativas na Agricultura.
                     </p>
-                    <p class="text-lg md:text-xl lg:text-2xl text-white leading-relaxed hero-tagline"
-                       data-translate="about-text-2">
-                        Nós focamos em sistemas de software, sensoriamento remoto, rastreabilidade, IA, Open Source e
-                        mais.
-                    </p>
+                    <div class="text-lg md:text-xl lg:text-2xl leading-relaxed space-y-3 text-center font-bold" style="color: #351b04;">
+                        <div data-translate="about-item-1">Sistemas de software</div>
+                        <div data-translate="about-item-2">Sensoriamento remoto</div>
+                        <div data-translate="about-item-3">Rastreabilidade</div>
+                        <div data-translate="about-item-4">Inteligência Artificial</div>
+                        <div data-translate="about-item-5">Open Source</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -255,12 +257,28 @@
                 en: 'About Us'
             },
             'about-text-1': {
-                pt: 'Nosso objetivo é contribuir com a expansão da <span style="color: #537043"><b>Agricultura sustentável e regenerativa</b></span>.',
-                en: 'We were born to contribute to the expansion of <span style="color: #537043"><b>sustainable and regenerative agriculture systems</b><span>.'
+                pt: '<span style="color: #364c28">Nosso objetivo é contribuir com a expansão da <b>Agricultura sustentável e regenerativa</b></span>',
+                en: '<span style="color: #364c28">We were born to contribute to the expansion of <b>sustainable and regenerative agriculture systems</b><span>'
             },
-            'about-text-2': {
-                pt: 'Focamos em <span style="color: #537043"><b>sistemas de software, sensoriamento remoto, rastreabilidade, IA, Open Source</b></span> e mais.',
-                en: 'Manaíba focuses on <span style="color: #537043"><b>software systems, remote sensing, traceability, AI, Open Source</b></span>, and more.'
+            'about-item-1': {
+                pt: 'Sistemas de software',
+                en: 'Software systems'
+            },
+            'about-item-2': {
+                pt: 'Sensoriamento remoto',
+                en: 'Remote sensing'
+            },
+            'about-item-3': {
+                pt: 'Rastreabilidade',
+                en: 'Traceability'
+            },
+            'about-item-4': {
+                pt: 'Inteligência Artificial',
+                en: 'Artificial Intelligence'
+            },
+            'about-item-5': {
+                pt: 'Open Source',
+                en: 'Open Source'
             },
 
             // Contact section
