use capital letters in list

--- a/site/index.html
+++ b/site/index.html
@@ -276,12 +276,12 @@
                 en: '<span style="color: #364c28">We were born to contribute to the expansion of <b>sustainable and regenerative agriculture systems</b>, focusing on<span>'
             },
             'about-item-1': {
-                pt: 'Sistemas de software',
-                en: 'Software systems'
+                pt: 'Sistemas de Software',
+                en: 'Software Systems'
             },
             'about-item-2': {
-                pt: 'Sensoriamento remoto',
-                en: 'Remote sensing'
+                pt: 'Sensoriamento Remoto',
+                en: 'Remote Sensing'
             },
             'about-item-3': {
                 pt: 'Rastreabilidade',
