increase list font

--- a/site/index.html
+++ b/site/index.html
@@ -152,7 +152,7 @@
                         A Manaíba nasce com o objetivo de enfrentar os desafios da expansão de práticas sustentáveis
                         e regenerativas na Agricultura.
                     </p>
-                    <div class="text-lg md:text-xl lg:text-2xl leading-relaxed space-y-3 text-center font-bold" style="color: #364c28;">
+                    <div class="text-xl md:text-2xl lg:text-3xl leading-relaxed space-y-3 text-center font-bold" style="color: #364c28;">
                         <div data-translate="about-item-1">Sistemas de software</div>
                         <div data-translate="about-item-2">Sensoriamento remoto</div>
                         <div data-translate="about-item-3">Rastreabilidade</div>
